--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
 	"main": "index.js",
 	"license": "MIT",
 	"scripts": {
-		"start": "node ./dist/index.js",
-		"dev": "nodemon ./src/index.ts",
+		"start": "node ./dist/app.js",
+		"dev": "nodemon ./app.ts",
 		"build": "tsc -p .",
 		"prisma:format": "prisma format"
 	},
